tooling/nargo_cli/tests/snapshots/execution_failure/validate_main_input_inherent_method/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused variable p
   ┌─ src/main.nr:26:9
   │
26 │ fn main(p: Percent) {}
   │         - unused variable
   │

warning: unused function validate
   ┌─ src/main.nr:15:8
   │
15 │     fn validate(&self) {
   │        -------- unused function
   │

error: Assertion failed: percent out of range
   ┌─ src/main.nr:22:9
   │
22 │         assert(self.value <= 100, "percent out of range");
   │         -------------------------------------------------
   │
   = Call stack:
     1: <impl std::validate::Validate for Percent>::validate
             at src/main.nr:26:13
     2: <impl std::validate::Validate for Percent>::validate
             at src/main.nr:22:13

Failed assertion
